<resources>
    <string name="app_name">MIPT3_Martynas</string>
    <string name="_0">0</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mPlus">M+</string>
    <string name="ms">MS</string>
    <string name="mMinus">M-</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="PlusMinus">±</string>
    <string name="Root">√</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Multiply">*</string>
    <string name="_1_x">1/x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Minus">-</string>
    <string name="Equals">=</string>
    <string name="Dot">.</string>
    <string name="Plus">+</string>
    <string name="Back">←</string>
    <string name="Percent">%</string>
</resources>