<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C"
    android:backgroundTint="#272727"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MainScreen"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_span="5"
                android:background="#323131"
                android:backgroundTint="#979797"
                android:gravity="bottom|end"
                android:text="@string/_0"
                android:textIsSelectable="false"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mc"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonRecall"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mr"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonStore"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ms"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonAdd"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mPlus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonRemove"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mMinus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonBack"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Back"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonDelete"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ce"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonEmpty"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/c"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonSign"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/PlusMinus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonRoot"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Root"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonSeven"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonEight"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonNine"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonDivide"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#C87575"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Divide"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonPercent"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Percent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonFour"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonFive"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonSix"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#C87575"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Multiply"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonFraction"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#803A3A"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_1_x"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:id="@+id/buttonOne"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonTwo"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonThree"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonMinus"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#C87575"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonCount"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="130dp"
                android:layout_gravity="fill"
                android:layout_span="1"
                android:layout_weight="2"
                android:backgroundTint="#803A3A"
                android:enabled="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Equals"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="323dp"
            android:layout_height="86dp"
            android:layout_marginTop="-65dp">

            <Button
                android:id="@+id/buttonZero"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="65dp"
                android:layout_span="2"
                android:backgroundTint="#AC5454"
                android:enabled="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/buttonDot"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#AC5454"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Dot"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonPlus"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:backgroundTint="#C87575"
                android:enabled="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>